--- a/.github/workflows/update-flakes.yml
+++ b/.github/workflows/update-flakes.yml
@@ -14,6 +14,10 @@ jobs:
         with:
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+      - uses: cachix/cachix-action@v12
+        with:
+          name: gabehoban
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v24
         with:
