--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -54,7 +54,7 @@ jobs:
 
           nix flake check --show-trace
 
-          git push -u origin update-flake_$(date -I)
+          git push -fu origin update-flake_$(date -I)
           PR=$(gh pr create \
           --base main \
           --body "Automatic package update for flake.lock on $(date -I)" \
